<resources>
    <string name="app_name">QuizProject</string>


    <!-- STRINGS FOR activity_main.xml -->
    <!--Text for hints in EditTextViews-->
    <string name="enter_your_name">Enter Your Name</string>
    <string name="enter_your_mail">Enter Your Email address</string>

    <!--Text for button HINT-->
    <string name="hint">hint</string>

    <!--QUESTION 1 TEXT-->
    <string name="question_1">Question 1</string>
    <string name="question_1_text">Which planet is closest to the Sun?</string>
    <string name="question_1_answer_1">Jupiter</string>
    <string name="question_1_answer_2" translatable="false">Mars</string>
    <string name="question_1_answer_3">Earth</string>
    <string name="question_1_answer_4">Venus</string>

    <!--QUESTION 2 TEXT-->
    <string name="question_2">Question 2</string>
    <string name="question_2_text">Which organizations are connected with space industry?</string>
    <string name="question_2_answer_1" translatable="false">Nasa</string>
    <string name="question_2_answer_2" translatable="false">Spacex</string>
    <string name="question_2_answer_3" translatable="false">NVidia</string>
    <string name="question_2_answer_4" translatable="false">Astrotech</string>

    <!--QUESTION 3 TEXT-->
    <string name="question_3">Question 3</string>
    <string name="question_3_text">What is on the picture below?</string>
    <string name="question_3_answer_1">Moon</string>
    <string name="question_3_answer_2">Sun</string>
    <string name="question_3_answer_3">Comet</string>
    <string name="question_3_answer_4">Asteroid</string>

    <!--QUESTION 4 TEXT-->
    <string name="question_4">Question 4</string>
    <string name="question_4_text">Are space rockets launched from this place?</string>
    <string name="open_map">Open Map</string>
    <string name="question_4_answer_1">Yes</string>
    <string name="question_4_answer_2">No</string>

    <!--Text for buttons CHECK ANSWERS and MAIL SUMMARY-->
    <string name="check_answers">Check Answers</string>
    <string name="mail_summary">Mail Summary</string>



    <!-- STRINGS FOR MainActivity.java -->
    <!--public void hintMessage1,2,3,4-->
    <string name="question_1_hint">Hint for question 1: Women are from... </string>
    <string name="question_2_hint">Hint for question 2: More than one answer is correct.</string>
    <string name="question_3_hint">Hint for question 3: It is not Sun for sure.</string>
    <string name="question_4_hint">Hint for question 4: YES! Of course!</string>

    <!--private void displayQuestionSummary, String answerStatement-->
    <string name="wrong">wrong!</string>
    <string name="correct">correct!</string>

    <!--private String createShortQuizSummary-->
    <string name="scored">\u0020scored:\u0020</string>

    <!--private String createShortQuizSummary, private String createQuizSummary-->
    <string name="points">/4 points.</string>

    <!--private String createQuestionSummary-->
    <string name="correct_answer_to_question">Correct answer to question\u0020</string>
    <string name="is">\u0020is:\u0020</string>
    <string name="your_answer_is">Your answer is\u0020</string>

    <!--public void sendMailAction-->
    <string name="score_in_quiz">\u0020score in QuizProject</string>

    <!--private String createQuizSummary-->
    <string name="your_score_is">Your score is\u0020</string>
    <string name="wow">Wow! Congratulations!</string>
    <string name="you_did_pretty_good">You did pretty good! Congratulations!</string>
    <string name="you_can_do_better">You can do better!</string>

    <!--String Question<1/2/3/4>Summary-->
    <string name="venus">Venus</string>
    <string name="nasa_spacex_astrotech" translatable="false">NASA, SpaceX, Astrotech</string>
    <string name="moon">Moon</string>
    <string name="yes">Yes</string>
</resources>
